--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v
+        uses: actions/checkout@v4
         
       - name: verifikasi dockerfile ada
         run : ls -la
